# backend-api-location

./: README.md  products.db  pyproject.toml  users.db
.github/workflows/: build-api.yml
app/: main.py  settings.py
app/adapters/internal/: sqlite_base.py
app/adapters/security/: utils_token.py  validate_token.py
app/adapters/security/model/: token_model.py
app/domain/command_handler/: create_product_handler.py  delete_product_handler.py  list_product_handler.py  login_handler.py  register_handler.py  update_product_handler.py  user_handler.py
app/domain/commands/: create_product_command.py  delete_product_command.py  login_command.py  register_command.py  update_product_command.py  user_command.py
app/domain/ports/: login_user_port.py  product_port.py  user_registry_port.py
app/entrypoint/api/: handler_api.py
app/entrypoint/api/model/: api_model.py
code/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
code/app/: main.py  settings.py
code/app/adapters/internal/: celery_adapter.py  mongo.py  redis.py
code/app/domain/command_handler/: celery_location_handler.py  celery_task_handler.py  location_handler.py
code/app/domain/commands/: celery_location_command.py  celery_task_command.py
code/app/domain/ports/: celery_location_port.py  location_port.py
code/app/entrypoint/api/: handler_api.py
code/app/entrypoint/api/model/: api_model.py
code/test/: test_location.py
infra/: main.tf  provider.tf  terraform.tfvars  vars.tf
test/: test_create_user.py  test_product.py
