[tool.poetry]
name = "backen-product"
version = "0.1.0"
description = "backend-dev"
authors = ["s2rg34-m4r2n4"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
bcrypt = "^4.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pydantic = "^2.8.2"
pytest = "^8.3.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.3"
jose = "^1.0.0"
python-multipart = "^0.0.9"
uuid = "^1.30"
email-validator = "^2.2.0"
semgrep = "^1.95.0"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
